Scan kickstarter, indiegogo, beta release. Email feature prototype.

--- a/default.conf
+++ b/default.conf
@@ -215,7 +215,7 @@ webDenyAs             = 403
 ; tasks in alphabetical order. If it's not present only listed tasks are shown.
 ; Tasks to which the user has no access are hidden. Duplicates are ignored.
 ;
-webIndexOrder         = log tasks pages cron
+webIndexOrder         = log tasks cron
 
 ; Links item captions in the top menu with their URL relative to web interface root.
 webMenu Start         = .
@@ -261,6 +261,6 @@ webScript common      = $common.js
 ; scan constants
 ;------------------------------------------------------------------------
 ;    sitename      site.index  site.page   table_index table_pages start_url
-scan kickstarter = kickstarter.index kickstarter.page kickstarter_index kickstarter_pages http://www.kickstarter.com/discover/recently-launched?page=1
-scan indiegogo   = indiegogo.index indiegogo.page indiegogo_index indiegogo_pages http://www.indiegogo.com/projects?filter_quick=new&pg_num=1
+scan kickstarter = kickstarter.index kickstarter.page kickstarter_index project_page http://www.kickstarter.com/discover/recently-launched?page=1
+scan indiegogo   = indiegogo.index indiegogo.page indiegogo_index project_page http://www.indiegogo.com/projects?filter_quick=new&pg_num=1
 
