Remove mimeil and downwind classes. Download simplified.

--- a/default.conf
+++ b/default.conf
@@ -68,16 +68,16 @@ mailFrom          = root@localhost
 ; is added so that for 200 msec actual delay will be between 200 and 220 msec.
 remoteDelay       = 50
 
-; Lists of values to be randomly picked when contacting remote server.
-;
 ; Accept-Language header
-dl languages      = en-us en-gb en de ja cn-zh pt-br es it ru
+dl languages      = en,ru
 ; Accept-Charset header
-dl charsets       = utf-8 iso-8859-1 windows-1251 koi8-u big-5 euc-jp shift-jis
+dl charsets       = utf-8
 ; Accept header
-dl mimes          = text/html application/xhtml+xml application/xml
+;dl mimes          = text/html,application/xhtml+xml,application/xml
+dl mimes          = text/html
 ; User-Agent
 dl useragent      = Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20100101 Firefox/24.0
+dl cache          = max-age=0;
 
 dlRedirects       = 5
 ; HTTP/1.0 or 1.1.
