Download class complately rewritten and now work with curl library.

--- a/default.conf
+++ b/default.conf
@@ -78,6 +78,8 @@ dl mimes          = text/html
 ; User-Agent
 dl useragent      = Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20100101 Firefox/24.0
 dl cache          = max-age=0;
+; Accept-Encoding
+dl encoding       = deflate, gzip
 
 dlRedirects       = 5
 ; HTTP/1.0 or 1.1.
