Error-safe site parsing Tidy usage removed.

--- a/default.conf
+++ b/default.conf
@@ -8,7 +8,7 @@
 ; Database
 ;------------------------------------------------------------------------
 
-dbDSN             = mysql:host=localhost;dbname=crowd-crawler
+dbDSN             = mysql:host=localhost;dbname=crowd-sqobot
 dbUser            = crowd
 dbPassword        = ergomost
 dbPrefix          = st_
@@ -217,7 +217,8 @@ webDenyAs             = 403
 ; tasks in alphabetical order. If it's not present only listed tasks are shown.
 ; Tasks to which the user has no access are hidden. Duplicates are ignored.
 ;
-webIndexOrder         = log tasks cron
+webIndexOrder         = log tasks 
+;cron
 
 ; Links item captions in the top menu with their URL relative to web interface root.
 webMenu Start         = .
