--- a/default.conf
+++ b/default.conf
@@ -159,5 +159,5 @@ dlLogMax          = 10M
 ; scan constants
 ;------------------------------------------------------------------------
 ;    sitename      site.index  site.page   table_index table_pages start_url
-scan kickstarter = site_index project_page http://www.kickstarter.com/discover/recently-launched?page=1
+scan kickstarter = site_index project_page http://www.kickstarter.com/discover/advanced?page=1&ref=recently_launched&sort=launch_date
 scan indiegogo   = site_index project_page http://www.indiegogo.com/projects?filter_quick=new&pg_num=1
