http 404  error now processed in scissors.

--- a/default.conf
+++ b/default.conf
@@ -47,13 +47,6 @@ dbLogMax          = 10M
 ;
 timeZone          = UTC
 
-; Seconds after which if a queue item hasn't been fulfilled it's marked as failed.
-; Usually Sqobot will mark failed items even on Fatal Errors but if things really
-; went wild it might have no chance - in this case items that have timed out are
-; marked as such by another process in the beginning of their queue processing job.
-;
-queueTimeout      = 60
-
 log               = info warn error fatal
 logFile           = out/%Y-%m-%d-%a.log
 
@@ -81,15 +74,15 @@ dl useragent      = Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20100101 
 dl cache          = max-age=0;
 ; Accept-Encoding
 dl encoding       = deflate, gzip
-
+; Max redirects
 dlRedirects       = 5
 ; HTTP/1.0 or 1.1.
-dlProtocol        = 1.0
+;dlProtocol        = 1.0
 ; Seconds. Can be float, e.g. 3.5 for 3500 msec. It also affects the timeout of
 ; inter-node requests.
 dlTimeout         = 30
 ; If set HTTP error statuses (404, 500, etc.) are ignored and exceptions are not thrown.
-dlFetchOnError    = 0
+dlFetchOnError    = 1
 
 ; Enables logging of remote requests - their request and response headers, GET
 ; query, POST size, response status and length and so on. strftime() %X substrings
