Statistic scan first version. Track remove and rename projects in indiegogo. Logging messages improved. Retry loading pages when timeout.

--- a/default.conf
+++ b/default.conf
@@ -22,12 +22,6 @@ dbConCharset      = utf8
 ;
 dbConTimeZone     = 
 
-; All but '' and 0 values enable off-loaded table listing all per-site IDs that
-; should not be crawled. Useful for distributed spider to keep all instances in
-; sync. If '1' table name is set to 'pages'. Final table value starts with dbPrefix.
-;
-dbPageIndex       =
-
 ; Enables logging of executed queries. strftime() %X substrings can be used
 ; similar to logFile.
 dbLog             = 
@@ -47,10 +41,8 @@ dbLogMax          = 10M
 ;
 timeZone          = UTC
 
-log               = info warn error fatal
+log               = debug info warn error fatal
 logFile           = out/%Y-%m-%d-%a.log
-
-mailFrom          = root@localhost
 
 
 ;------------------------------------------------------------------------
@@ -80,7 +72,9 @@ dlRedirects       = 5
 ;dlProtocol        = 1.0
 ; Seconds. Can be float, e.g. 3.5 for 3500 msec. It also affects the timeout of
 ; inter-node requests.
-dlTimeout         = 30
+dlTimeout         = 10
+; Max retry's when timeout
+dlRetry = 5
 ; If set HTTP error statuses (404, 500, etc.) are ignored and exceptions are not thrown.
 dlFetchOnError    = 1
 
