--- a/default.conf
+++ b/default.conf
@@ -41,7 +41,7 @@ dbLogMax          = 10M
 ;
 timeZone          = UTC
 
-log               = debug info warn error fatal
+log               = info warn error fatal
 logFile           = out/%Y-%m-%d-%a.log
 
 
@@ -145,6 +145,6 @@ dlLogMax          = 10M
 ;------------------------------------------------------------------------
 ; scan constants
 ;------------------------------------------------------------------------
-;    sitename      index_table page_table stats_table start_url
-scan kickstarter = site_index project_page project_stats http://www.kickstarter.com/discover/advanced?page=1&ref=recently_launched&sort=launch_date
-scan indiegogo   = site_index project_page project_stats http://www.indiegogo.com/projects?filter_quick=new&pg_num=1
+;    sitename      index_table page_table stats_table proto start_url
+scan kickstarter = site_index project_page project_stats https:// https://www.kickstarter.com/discover/advanced?page=1&ref=recently_launched&sort=launch_date
+scan indiegogo   = site_index project_page project_stats http:// http://www.indiegogo.com/projects?filter_quick=new&pg_num=1
