Email build templated. Log enhancements.

--- a/default.conf
+++ b/default.conf
@@ -114,9 +114,15 @@ dlLogMax          = 10M
 ; Cache dir
 twigCache       = out
 ; Templates dir
-twigTemplates   = temlates
+twigTemplates   = templates
+
 ;------------------------------------------------------------------------
-; scan constants
+; mail settings
+;------------------------------------------------------------------------
+mailFields  = category campaign_type name short_url blurb
+
+;------------------------------------------------------------------------
+; scan settings
 ;------------------------------------------------------------------------
 scan site_id     = proto start_page
 scan kickstarter = https:// https://www.kickstarter.com/discover/advanced?page=1&ref=recently_launched&sort=launch_date
