--- a/default.conf
+++ b/default.conf
@@ -119,7 +119,8 @@ twigTemplates   = templates
 ;------------------------------------------------------------------------
 ; mail settings
 ;------------------------------------------------------------------------
-mailFields  = category campaign_type name short_url blurb
+mailFields  = category campaign_type name short_url blurb project_json
+sortOrder = category campaign_type name
 
 ;------------------------------------------------------------------------
 ; scan settings
