Changed size of avatar pictures. Add sortOrder for email.

--- a/default.conf
+++ b/default.conf
@@ -119,7 +119,7 @@ twigTemplates   = templates
 ;------------------------------------------------------------------------
 ; mail settings
 ;------------------------------------------------------------------------
-mailFields  = category campaign_type name short_url blurb project_json
+mailFields  = category campaign_type name short_url blurb project_json avatar
 sortOrder = category campaign_type name
 
 ;------------------------------------------------------------------------
