Netbeans 8.0 project.  Indiegogo - new page and stats parsing. Indiegogo - new indexing. Kikstarter - removed latitude/longitude scan.

--- a/default.conf
+++ b/default.conf
@@ -40,7 +40,7 @@ dbLogMax          = 10M
 ;
 timeZone          = UTC
 
-log               = info warn error fatal
+log               = debug info warn error fatal
 logFile           = log/%Y-%m-%d-%a.log
 
 
@@ -61,7 +61,8 @@ dl charsets       = utf-8
 dl mimes          = text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
 ; User-Agent
 ;dl useragent      = Mozilla/5.0 (iPhone; CPU iPhone OS 7_0_4 like Mac OS X) AppleWebKit/537.51.1 (KHTML, like Gecko) Mobile/11B554a
-dl useragent      = Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20100101 Firefox/24.0
+;dl useragent      = Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20100101 Firefox/24.0
+dl useragent      = cfwatcher
 dl cache          = max-age=0;
 ; Accept-Encoding
 dl encoding       = deflate, gzip
@@ -71,9 +72,9 @@ dlRedirects       = 5
 ;dlProtocol        = 1.0
 ; Seconds. Can be float, e.g. 3.5 for 3500 msec. It also affects the timeout of
 ; inter-node requests.
-dlTimeout         = 10
+dlTimeout         = 60
 ; Max retry's when timeout
-dlRetry = 5
+dlRetry = 3
 ; If set HTTP error statuses (404, 500, etc.) are ignored and exceptions are not thrown.
 dlFetchOnError    = 1
 
@@ -125,9 +126,9 @@ sortOrder = category campaign_type name
 ;------------------------------------------------------------------------
 ; scan settings
 ;------------------------------------------------------------------------
-scan site_id     = proto start_page
-scan kickstarter = https:// https://www.kickstarter.com/discover/advanced?page=1&ref=recently_launched&sort=launch_date
-scan indiegogo   = http:// http://www.indiegogo.com/projects?filter_quick=new&pg_num=1
+scan site_id     = start_page
+scan kickstarter = https://www.kickstarter.com/discover/advanced?page=1&ref=recently_launched&sort=launch_date
+scan indiegogo   = https://www.indiegogo.com/explore?filter_quick=new&per_page=5000
 
 ;------------------------------------------------------------------------
 ; db table names
