Enhanced Download stats. Add rescan task for indiegogo, Indiegogo parse page fixed.

--- a/default.conf
+++ b/default.conf
@@ -24,7 +24,8 @@ dbConTimeZone     =
 
 ; Enables logging of executed queries. strftime() %X substrings can be used
 ; similar to logFile.
-dbLog             = log/log.sql
+dbLog             = 
+;log/log.sql
 
 ; When dbLog exceeds this size it's cleared. Allows for K/M suffixes (Kilo/Megabyte).
 dbLogMax          = 10M
