Optimized SQLl requests in stats modules.

--- a/default.conf
+++ b/default.conf
@@ -128,7 +128,7 @@ sortOrder = category campaign_type name
 ; scan settings
 ;------------------------------------------------------------------------
 scan site_id     = start_page
-scan kickstarter = https://www.kickstarter.com/discover/advanced?page=1&ref=recently_launched&sort=launch_date
+scan kickstarter = https://www.kickstarter.com/discover/advanced?page=1&sort=newest
 scan indiegogo   = https://www.indiegogo.com/explore?filter_quick=new&per_page=5000
 
 ;------------------------------------------------------------------------
