--- a/default.conf
+++ b/default.conf
@@ -11,8 +11,6 @@
 dbDSN             = mysql:host=localhost;dbname=crowd-sqobot
 dbUser            = crowd
 dbPassword        = ergomost
-dbPrefix          = st_
-dbEngine          = InnoDB
 
 dbConCharset      = utf8
 
@@ -135,14 +133,14 @@ scan indiegogo   = https://www.indiegogo.com/explore?filter_quick=new&per_page=5
 ; db table names
 ;------------------------------------------------------------------------
 dbNames site_id     = index_table page_table stats_table 
-dbNames kickstarter = site_index project_page project_stats 
-dbNames indiegogo   = site_index project_page project_stats 
+dbNames kickstarter = st_site_index st_project_page st_project_stats
+dbNames indiegogo   = st_site_index st_project_page st_project_stats
 
 ;------------------------------------------------------------------------
 ; db table names, common
 ;------------------------------------------------------------------------
 dbComNames site_id =  subs_table newmail_table
-dbComNames common  =  users_category newmail_table
+dbComNames common  =  st_users_category st_newmail_table
 
 
 ;------------------------------------------------------------------------
