--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -8,8 +8,7 @@ auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/lib
 browser.reload.on.save=true
 code.analysis.excludes=
 ignore.path=
-include.path=\
-    ${php.global.include.path}
+include.path=
 php.version=PHP_54
 source.encoding=UTF-8
 src.dir=.
